--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body style="background: lightbluegit;">
+<body style="background: lightblue;">
 Test Live
 </body>
 </html>
