--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-adsense-account" content="ca-pub-1929462885011742">
     <title>Document</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1929462885011742"
+            crossorigin="anonymous"></script>
 </head>
 <body style="background: lightblue;">
 Test Live. Work.
